renamed and do not gather facts

--- a/repos/fedora/repos_custom_rpmfusion.yml
+++ b/repos/fedora/repos_custom_rpmfusion.yml
@@ -1,5 +1,8 @@
 ---
+# info here: https://rpmfusion.org/Configuration#Command_Line_Setup_using_rpm
+
 - name: Add RPM Fusion repositories
+  gather_facts: false
   connection: local
   hosts: localhost
   become: yes
