--- a/repos/fedora/repos_copr.yml
+++ b/repos/fedora/repos_copr.yml
@@ -5,17 +5,13 @@
   connection: local
   hosts: localhost
   become: yes
+  vars:
+    file: repos_copr.txt
   tasks:
-  
-    - name: Adding COPR repository lukenukem/asus-linux
+
+    - name: Adding COPR repositories
       community.general.copr:
         state: enabled
         chroot: fedora-rawhide-x86_64
-        name: lukenukem/asus-linux
-
-          #- name: Adding COPR repository ycollet/audinux
-          #  community.general.copr:
-          #    state: enabled
-          #    chroot: fedora-rawhide-x86_64
-          #    name: ycollet/audinux
-
+        name: "{{ item }}"
+      loop: "{{ lookup('file', file).splitlines() }}"
